# demo-fintech

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  fbf.py  main.py  models.py  seed.py
scripts/: load_test.py  seed.py
templates/: base.html  dashboard.html  user_detail.html
